package com.library.library_management_system.entity;

public enum FineStatus {
    PENDING,
    PAID,
    WAIVED
}

