package com.library.library_management_system.entity;

public enum ReservationStatus {
    PENDING,
    AVAILABLE,
    FULFILLED,
    CANCELED,
    EXPIRED
}

