package com.library.library_management_system.entity;

public enum Role {
    PATRON,
    LIBRARIAN
}
